--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Perlbal-XS-HTTPHeaders
-version:      0.19
+version:      0.20
 version_from: lib/Perlbal/XS/HTTPHeaders.pm
 installdirs:  site
 requires:
@@ -9,4 +9,4 @@ requires:
     Perlbal::HTTPHeaders:          0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30_01
+generated_by: ExtUtils::MakeMaker version 6.30
